--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@
 }
 
 :root {
-  --bg-color: #212a34;
-  --second-bg-color: #353f4e;
+  --bg-color: #505863;
+  --second-bg-color: #68727b;
   --text-color: #fff;
-  --main-color: #d80404;
+  --main-color: #15270a;
 }
 
 body {
@@ -43,20 +43,22 @@ body a {
 
 .logo {
   /* border: 2px solid orange; */
-  font-size: 2rem;
+  font-size: 3rem;
   color: var(--main-color);
-  font-weight: 600;
+  font-weight: 200;
   font-family: "Orbitron", sans-serif;
 }
 .navbar {
   /* border: 2px solid yellow; */
+  font-size: 2rem;
   display: flex;
   gap: 2rem;
   flex-wrap: wrap;
 }
 
 .navbar a {
-  font-size: 1.2rem;
+  /* border: 2px solid red; */
+  font-size: 2rem;
   color: var(--text-color);
 }
 
@@ -66,6 +68,7 @@ body a {
 }
 
 section {
+  /* border: 2px solid red; */
   min-height: 100vh;
   padding: 0 10rem;
 }
@@ -82,29 +85,34 @@ section {
 
 .home-content {
   /* border: 2px solid yellow; */
-  width: 70%;
+  width: 100%;
 }
 .home-img {
   /* border: 2px solid pink; */
-  width: 30%;
+  width: 50%;
 }
 
 .home-img img {
-  width: 100%;
+  /* border: 2px solid red; */
+  width: 200%;
   max-width: 20rem;
   border-radius: 10%;
   animation: floatImage 3s ease-in-out infinite;
 }
 
 .home-content h3 {
-  font-size: 2rem;
+  /* border: 2px solid red; */
+
+  font-size: 3rem;
   font-weight: 700;
 }
 
-.home-content title {
-}
+/* .home-content title {
+
+} */
 
 .home-content .name {
+  /* border: 2px solid red; */
   color: var(--main-color);
   font-size: 3rem;
   font-family: "Orbitron", sans-serif;
@@ -113,9 +121,10 @@ section {
 }
 
 .info {
+  /* border: 2px solid red; */
   margin-top: 2rem;
   font-family: "IBM Plex Mono", monospace;
-  font-size: 1rem;
+  font-size: 2rem;
 }
 
 .social-media {
@@ -126,9 +135,10 @@ section {
 }
 
 .social-media a {
+  /* border: 2px solid red; */
   width: 2.5rem;
   height: 2.5rem;
-  font-size: 3rem;
+  font-size: 4rem;
   color: var(--main-color);
   margin: 5rem 2rem;
   display: flex;
@@ -144,9 +154,10 @@ section {
 }
 
 .btn {
+  /* border: 2px solid red; */
   background-color: var(--main-color);
-  padding: 1rem 3 rem;
-  border-radius: 1rem;
+  padding: 0.5rem 3rem;
+  border-radius: 5rem;
   box-shadow: 0 0 3rem var(--main-color);
   color: var(--second-bg-color);
   letter-spacing: 0.5rem;
@@ -175,20 +186,21 @@ section {
   animation: floatImage 3s ease-in-out infinite;
 }
 .about-content {
-  /* border: 2px solid rgb(201, 37, 64); */
   width: 75%;
 }
 
 .heading {
+  /* border: 2px solid rgb(201, 37, 64); */
   text-align: center;
-  font-size: 3rem;
+  font-size: 5rem;
 }
 .about-content h3 {
-  font-size: 1.5rem;
+  font-size: 3rem;
 }
 .about-content p {
+  /* border: 2px solid red; */
   font-family: "IBM Plex Mono", monospace;
-  font-size: 1rem;
+  font-size: 2rem;
   margin: 3rem 0;
 }
 span {
@@ -204,6 +216,7 @@ span {
 
 .skills .heading {
   /* border: 2px solid rgb(55, 0, 255); */
+
   margin-bottom: 4rem;
 }
 
@@ -223,7 +236,7 @@ span {
   text-align: center;
   border: 0.2rem solid var(--bg-color);
   padding: 1rem;
-  transition: all 1s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .skills-box:hover {
@@ -248,6 +261,7 @@ span {
 
 .projects {
   padding: 3rem;
+  padding-bottom: 6rem;
   background-color: var(--second-bg-color);
 }
 .projects h2 {
@@ -273,6 +287,7 @@ span {
   width: 100%;
 }
 .pro {
+  /* border: 2px solid red; */
   position: absolute;
   bottom: 0;
   left: 0;
@@ -280,11 +295,12 @@ span {
   transform: translateY(100%);
   transition: all 0.5s;
   text-align: center;
+  font-weight: 900;
 }
 .pro a {
   font-size: 2rem;
   font-family: "Orbitron", sans-serif;
-  color: var(--main-color);
+  color: var(--text-color);
 }
 
 .projects-box:hover .pro {
